<resources>
    <string name="app_name">DataVault</string>
    <string name="dob">DOB</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add">ADD</string>
    <string name="Required" />
    <string name="required">Required*</string>
    <string name="dob1">Dob1</string>
    <string name="email1">Email1</string>
    <string name="_1">1</string>
    <string name="name1">Name1</string>
    <string name="phone1">Phone1</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
</resources>